--- a/src/app/i18n/translations/es-ES.json
+++ b/src/app/i18n/translations/es-ES.json
@@ -53,7 +53,10 @@
     "navigationGroup": "Navegación de páginas",
     "zoomGroup": "Controles de zoom",
     "historyGroup": "Acciones de historial",
-    "exportGroup": "Opciones de exportación"
+    "exportGroup": "Opciones de exportación",
+    "accessibilityGroup": "Opciones de accesibilidad",
+    "highContrast": "Alto contraste",
+    "highContrastToggle": "Activar tema de alto contraste"
   },
   "sidebar": {
     "title": "Anotaciones (JSON)",
@@ -172,10 +175,17 @@
       "hexPlaceholder": "#5eead4",
       "rgbPlaceholder": "rgb(94, 234, 212)"
     },
-    "actions": {
-      "duplicate": "Duplicar anotación"
-    },
-    "editingBadge": "Editando"
+      "actions": {
+        "duplicate": "Duplicar anotación",
+        "confirm": "Guardar anotación",
+        "cancel": "Cancelar edición",
+        "delete": "Eliminar anotación"
+      },
+      "aria": {
+        "summary": "Anotación {{index}} en la página {{page}} ({{type}}: {{name}})",
+        "unnamed": "Campo sin nombre"
+      },
+      "editingBadge": "Editando"
   },
   "fonts": {
     "custom": {
