--- a/src/app/i18n/translations/ca.json
+++ b/src/app/i18n/translations/ca.json
@@ -53,7 +53,8 @@
     "navigationGroup": "Navegació de pàgines",
     "zoomGroup": "Controls de zoom",
     "historyGroup": "Accions d'historial",
-    "exportGroup": "Opcions d'exportació"
+    "exportGroup": "Opcions d'exportació",
+    "shortcuts": "Dreceres"
   },
   "sidebar": {
     "title": "Anotacions (JSON)",
@@ -188,6 +189,25 @@
       "empty": "Encara no has afegit fonts personalitzades.",
       "unsupported": "El teu navegador no permet carregar fonts personalitzades.",
       "error": "No s'ha pogut carregar la font seleccionada. Prova amb un altre fitxer."
+    }
+  },
+  "shortcuts": {
+    "title": "Dreceres de teclat",
+    "description": "Personalitza les tecles per a les accions habituals de l'espai de treball.",
+    "addBinding": "Afegir drecera",
+    "removeBinding": "Eliminar",
+    "restoreDefaults": "Restaurar valors per defecte",
+    "close": "Tancar",
+    "listening": "Prem la combinació desitjada…",
+    "actions": {
+      "openShortcuts": "Obrir el diàleg de dreceres",
+      "prevPage": "Pàgina anterior",
+      "nextPage": "Pàgina següent",
+      "zoomIn": "Ampliar",
+      "zoomOut": "Reduir",
+      "undo": "Desfer",
+      "redo": "Refer",
+      "downloadPdf": "Descarregar PDF anotat"
     }
   },
   "viewer": {
